<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@drawable/background_search"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_menu_grey_500_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu_button" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="#FFFFFF"
        android:hint="@string/search_hint"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@id/btnMenu"
        app:layout_constraintLeft_toRightOf="@id/btnMenu"
        app:layout_constraintTop_toTopOf="@id/btnMenu"
        android:inputType="text"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/btnMic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_mic_grey_500_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/mic_button" />

    <ImageButton
        android:id="@+id/btnOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_more_vert_grey_500_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/option_button" />

    <ImageButton
        android:id="@+id/btnAddPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_playlist_add_grey_500_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_playlist_button" />
</androidx.constraintlayout.widget.ConstraintLayout>