<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civAlbum"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="64dp"
        android:src="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="#4FFFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/civAlbum"
        app:layout_constraintLeft_toLeftOf="@id/civAlbum"
        app:layout_constraintRight_toRightOf="@id/civAlbum"
        app:layout_constraintTop_toTopOf="@id/civAlbum" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/civAlbum"
        app:layout_constraintLeft_toLeftOf="@id/civAlbum"
        app:layout_constraintRight_toRightOf="@id/civAlbum"
        app:layout_constraintTop_toTopOf="@id/civAlbum" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/civAlbum"
        app:layout_constraintRight_toRightOf="@id/civAlbum"
        app:layout_constraintTop_toBottomOf="@id/civAlbum"
        tools:text="Title" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/civAlbum"
        app:layout_constraintRight_toRightOf="@id/civAlbum"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="Artist" />

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="@id/civAlbum"
        app:layout_constraintTop_toBottomOf="@id/tvArtist"
        tools:text="00:15" />

    <SeekBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="20"
        android:progressTint="@color/colorPrimary"
        android:thumb="@drawable/ic_pause_circle_filled_black_48dp"
        android:thumbTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/tvCurrent"
        app:layout_constraintLeft_toRightOf="@id/tvCurrent"
        app:layout_constraintRight_toLeftOf="@id/tvLength"
        app:layout_constraintTop_toTopOf="@id/tvCurrent" />

    <TextView
        android:id="@+id/tvLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="@id/civAlbum"
        app:layout_constraintTop_toBottomOf="@id/tvArtist"
        tools:text="01:00" />

    <ImageButton
        android:id="@+id/btnRepeat"
        style="@style/GreyButton"
        android:contentDescription="@string/repeat_button"
        android:src="@drawable/ic_repeat_black_36dp"
        app:layout_constraintLeft_toLeftOf="@id/tvCurrent"
        app:layout_constraintTop_toBottomOf="@id/tvCurrent" />

    <ImageButton
        android:id="@+id/btnPrev"
        style="@style/GreyButton"
        android:contentDescription="@string/previous_button"
        android:src="@drawable/ic_skip_previous_black_36dp"
        app:layout_constraintLeft_toRightOf="@id/btnRepeat"
        app:layout_constraintRight_toLeftOf="@id/btnNext"
        app:layout_constraintTop_toBottomOf="@id/tvCurrent" />

    <ImageButton
        android:id="@+id/btnNext"
        style="@style/GreyButton"
        android:contentDescription="@string/next_button"
        android:src="@drawable/ic_skip_next_black_36dp"
        app:layout_constraintLeft_toRightOf="@id/btnPrev"
        app:layout_constraintRight_toLeftOf="@id/btnShuffle"
        app:layout_constraintTop_toBottomOf="@id/tvCurrent" />

    <ImageButton
        android:id="@+id/btnShuffle"
        style="@style/GreyButton"
        android:contentDescription="@string/shuffle_button"
        android:src="@drawable/ic_shuffle_black_36dp"
        app:layout_constraintRight_toRightOf="@id/tvLength"
        app:layout_constraintTop_toBottomOf="@id/tvCurrent" />

    <ImageButton
        style="@style/GreyButton"
        android:src="@drawable/ic_shuffle_black_36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shuffle_black_36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>